# dynatrace-cpp-internship-2023

project/: CMakeLists.txt
project/src/: internship.cpp  internship.h
project/src/test/: internship_test.cpp
